--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -74,6 +74,13 @@ body {
 	margin-right: 20px;
 	font-family: 'Lato', sans-serif;
 }
+.textpoint{
+	text-align: center;
+	margin-left: 20px;
+	margin-right: 20px;
+	padding-left: 370px;
+	padding-right: 370px;
+}
 .linkglossarselected {
 	color: blue;
 	text-decoration:none;
