--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -4,7 +4,15 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+.helpbutton{
+	display: inline-block; 
+	color: #3478e5;
+	background-color: white;
+	border: 3px solid #3478e5;
+	font-size: 125%;
+	height: 35px;
+	width: 3%;
+}
 ::-webkit-scrollbar {
     height: 5px;
     width: 5px;
@@ -73,6 +81,14 @@ body {
 	margin-left: 10px;
 	margin-right: 20px;
 	font-family: 'Lato', sans-serif;
+}
+.hilfetext{
+	text-align: center;
+	margin-left: 20px;
+	margin-right: 20px;
+	padding-left: 370px;
+	padding-right: 370px;
+	display: none;
 }
 .textpoint{
 	text-align: center;
