--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -10,10 +10,14 @@ body {
 	background-color: white;
 	font-size: 125%;
 	height: 35px;
-	width: 20%;
+	width: 5%;
 	border: solid 2px #3478e5;
 	background-color: transparent;
 	font-size: 12px;
+}
+.helpbutton:hover{
+background-color: #3478e5;
+color: white;
 }
 ::-webkit-scrollbar {
     height: 5px;
