--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -14,6 +14,14 @@ body {
 	background-color: transparent;
 	font-size: 12px;
 }
+.textmarked {
+	background-color: #3478e5;
+	text-align: left;
+	margin-left: 20px;
+	margin-right: 20px;
+	padding-left: 370px;
+	padding-right: 370px;
+}
 .helpbutton:hover{
  background-color: #3478e5;
  color: white;
