--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -14,6 +14,25 @@ body {
 	background-color: transparent;
 	font-size: 12px;
 }
+.solution{
+	display: none;
+}
+.solutionbutton{
+	position: relative;
+	left:  calc(50% - 100px);
+	color: black;
+	background-color: white;
+	width: 200px;
+	height: 50px;
+	border: solid 2px black;
+	background-color: transparent;
+	font-size: 12px;
+}
+.solutionbutton:hover{
+ background-color: black;
+ color: white;
+ }
+ 
 .textmarked {
 	background-color: (255,255,0,0.6);
 }
