--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -278,6 +278,10 @@ div.heading {
 	margin-left: 33%;
 	font-size: 100%;
 }
+.answers2{
+	margin-left: 25%;
+	font-size: 100%;
+}
 .answer{
 	text-decoration: none;
 }
