--- a/CSS_JSS/stylesheet.css
+++ b/CSS_JSS/stylesheet.css
@@ -64,6 +64,10 @@ color: black;
 }
 .imagecontainer{
 	margin-left: calc(50% - 200px);
+	margin-right: calc(50% - 200px);
+	padding: 10px;
+	overflow: hidden;
+	border: solid 2px black;
 }
 .Background{
 	position: absolute;
